--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="./assets/imgs/profile.jpg" alt="Foto de perfil">
     </div>
     <div class="texto-perfil">
-      <h1>Desenvolvedor Front-End & UX/UI Designer</h1>
+      <h1>Desenvolvedor Web & UX/UI Designer</h1>
       <p>Javascript - Wordpress - Banco de Dados - PHP - Figma - HTML - CSS.</p>
       <p id="azul" class="link-simples" href="#">Cursando Análise e Desenvolvimento de Sistemas</p>
     </div>
